--- a/sand_custom/views/main_sub_menu.xml
+++ b/sand_custom/views/main_sub_menu.xml
@@ -37,7 +37,7 @@
             <field name="domain">[('picking_type_code','=','incoming')]</field>
             <field name="context">{'default_picking_type_code':'incoming'}</field>
             <field name="search_view_id" ref="stock.view_picking_internal_search"/>
-        </record>
+    </record>
 
     <menuitem id="menu_stock_incoming_shipment"
               action="sand_custom.action_picking_incoming" name="Purchase"
@@ -52,7 +52,20 @@
             <field name="domain">[('picking_type_code','=','outgoing')]</field>
             <field name="context">{'default_picking_type_code':'outgoing'}</field>
             <field name="search_view_id" ref="stock.view_picking_internal_search"/>
-        </record>
+    </record>
+
+    <record id="action_picking_outgoing_form" model="ir.actions.act_window.view">
+            <field eval="2" name="sequence"/>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="sand_custom.view_picking_form_out"/>
+            <field name="act_window_id" ref="sand_custom.action_picking_outgoing"/>
+    </record>
+    <record id="action_picking_outgoing_tree" model="ir.actions.act_window.view">
+            <field name="sequence" eval="1"/>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="stock.vpicktree"/>
+            <field name="act_window_id" ref="sand_custom.action_picking_outgoing"/>
+    </record>
 
     <menuitem id="menu_stock_outgoing_shipment"
               action="sand_custom.action_picking_outgoing" name="Sales"
@@ -113,18 +126,25 @@
                             <field name="email" widget="email"/>
                         </group>
                     </group>
+                    <group>
+                        <group>
+                            <field name="customer"/>
+                            <field name="supplier"/>
+                        </group>
+                    </group>
                 </sheet>
                 </form>
             </field>
         </record>
 
     <record id="action_partner_form_sand" model="ir.actions.act_window">
-            <field name="name">Customers</field>
+            <field name="name">Contacts</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{}</field>
+            <field name="domain">['|',('supplier','=',True),('customer','=',True),('user_ids','=',False)]</field>
     </record>
 
     <record id="action_partner_form_sand2" model="ir.actions.act_window.view">
@@ -141,7 +161,7 @@
     </record>
 
     <menuitem id="menu_partner_form_sand"
-              action="sand_custom.action_partner_form_sand" name="Customer/Supplier"
+              action="sand_custom.action_partner_form_sand" name="Contacts"
               parent="sand_custom.menu_stock_parent_shipment" sequence="60" groups="stock.group_stock_user"/>
 
 </odoo>
