--- a/sand_custom/views/stock_picking_views.xml
+++ b/sand_custom/views/stock_picking_views.xml
@@ -31,6 +31,22 @@
             <xpath expr="//field[@name='state']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
+            <xpath expr="//field[@name='partner_id']" position="attributes">
+                <attribute name="domain">[('supplier','=',True),('user_ids','=',False)]</attribute>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="view_picking_form_out" model="ir.ui.view">
+        <field name="name">stock.picking.form</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="sand_custom.view_picking_form"/>
+        <field name="mode">primary</field>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_id']" position="attributes">
+                <attribute name="domain">[('customer','=',True),('user_ids','=',False)]</attribute>
+                <attribute name="string">Customer</attribute>
+            </xpath>
         </field>
     </record>
 
